tests/diagnostics/pipeline/downstream_suppression/parsing_error_blocks_syntax_rules/expect.txt
# exit: 1
lib.coppice:1:8: error: constants require an explicit type annotation
  BROKEN := 1
         ^
